update:basic-structure-comlete:v0.3

--- a/pages/login.html
+++ b/pages/login.html
@@ -1,11 +1,15 @@
 <div class="login" ng-controller="loginController">
+  <div class="hero-login">
+      <img class="logo" src="https://goo.gl/pmgbk5">
+      <p>Find the best restaurants, cafés and bars in India</p>
+  </div>
     <div class="login-form">
         <h3> Login </h3>
        <form name="loginForm">
     <div class="form-group">
       <label for="user-email">Email address</label>
       <input type="email" class="form-control" id="user-email" placeholder="Email" name="email" ng-model="user.email" required="">
-      <div ng-show="loginForm.email.$error.required">Required!</div>
+      <div ng-show="loginForm.email.$error.required"></div>
       <div ng-show="loginForm.email.$error.email">This doesn't look like a valid email</div>
     </div>
     <div class="form-group">
@@ -18,7 +22,7 @@
       Password must be at most 15 characters long
       </div>
       <div ng-show="loginForm.password.$error.required">
-      Please enter your super secret ninja password
+      <!--Please enter your super secret ninja password-->
       </div>
     </div>
     <button type="submit" class="btn btn-default" ng-disabled="loginForm.$invalid" ng-click="goToHome()">Login</button>
