--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="main.css">
 	<script src="js/angular.min.js"></script>
    <script src="https://code.angularjs.org/1.6.5/angular-route.js"></script>
+   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 </head>
 <style>
     input.ng-invalid.ng-dirty {
